BB-7041: FrontStore > Quick Order > Add to Shopping list button wrong style in Import Validation popup. - fixed buttn label name - fixed position of nutton(cropped effect) - fixed bg color of button

--- a/src/Oro/Bundle/ShoppingListBundle/Resources/public/blank/scss/styles.scss
+++ b/src/Oro/Bundle/ShoppingListBundle/Resources/public/blank/scss/styles.scss
@@ -1,1 +1,8 @@
 // @theme: blank
+.mass-action-controls{
+  .btn-group.full{
+      .add-to-shopping-list-button{
+        width: auto;
+      }
+  }
+}
